Add readme and requirements.

--- a/Notebooks/Penguins_exploration.ipynb
+++ b/Notebooks/Penguins_exploration.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Pandas: built on two key python libraries, easy to use open source data analysis and manipulation tool. \n",
     "1. numpy\n",
-    "2. Matplotkib\n",
+    "2. Matplotlib\n",
     "\n",
     "It is designed to handle rectangualr data. "
    ]
@@ -72,7 +72,7 @@
    "id": "3eb25226",
    "metadata": {},
    "source": [
-    "# difference betwen methos and attribute.\n",
+    "# difference betwen method and attribute.\n",
     "1. method: function that belongs to an objectand performs an action. call with parenthesis ().\n",
     "2. attribute: characterstics of an object and performs an action which can accesed without parenthesis. "
    ]
