--- a/Notebooks/Basic_pandas.ipynb
+++ b/Notebooks/Basic_pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 199,
    "id": "b37b3893",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 200,
    "id": "c065c352",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 201,
    "id": "5201ed9e",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 201,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 202,
    "id": "e15e30fe",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 203,
    "id": "3ec36575",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 203,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 204,
    "id": "656328ac",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 204,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 205,
    "id": "71d6c11c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 206,
    "id": "59c7052c",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 207,
    "id": "b6b3a4d1",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 207,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 208,
    "id": "eda72acd",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "4  kyoto  2005     1550000"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 208,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 209,
    "id": "b0b2442a",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "5     1600000  kyoto  2010"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 209,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 210,
    "id": "ae271292",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "Index(['year', 'city', 'population', 'debt'], dtype='object')"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 210,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 211,
    "id": "77afc7c3",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "Name: city, dtype: object"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 211,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 212,
    "id": "78340404",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 212,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 213,
    "id": "3915a5eb",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "6  2010  kyoto     1600000     5"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 213,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 214,
    "id": "deb12e93",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
        "6  2010  kyoto     1600000   NaN"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 214,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,96 +778,11 @@
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>year</th>\n",
-       "      <th>city</th>\n",
-       "      <th>population</th>\n",
-       "      <th>debt</th>\n",
-       "      <th>foreigners</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>osaka</td>\n",
-       "      <td>2700000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>osaka</td>\n",
-       "      <td>2750000</td>\n",
-       "      <td>-1.2</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>osaka</td>\n",
-       "      <td>2800000</td>\n",
-       "      <td>2.3</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2000</td>\n",
-       "      <td>kyoto</td>\n",
-       "      <td>1500000</td>\n",
-       "      <td>-5.7</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2005</td>\n",
-       "      <td>kyoto</td>\n",
-       "      <td>1550000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>kyoto</td>\n",
-       "      <td>1600000</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   year   city  population  debt foreigners\n",
-       "1  2000  osaka     2700000   NaN       True\n",
-       "2  2005  osaka     2750000  -1.2       True\n",
-       "3  2010  osaka     2800000   2.3      False\n",
-       "4  2000  kyoto     1500000  -5.7      False\n",
-       "5  2005  kyoto     1550000   NaN      False\n",
-       "6  2010  kyoto     1600000   NaN        NaN"
+       "Index(['year', 'city', 'population', 'debt'], dtype='object')"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,9 +791,19 @@
     "#new columns cannot be created with frame2.columns syntax.\n",
     "# Assigning the column that doesnt exist will create a new column. The del keywordwill delete columns as with a dict.\n",
     "frame2[\"foreigners\"]=frame.city==\"osaka\"\n",
+    "# it returns boolean values, each row in foreigners is true if city equals osaka basically.\n",
     "frame2\n",
-    "\n",
-    "# it returns boolean values, each row in foreigners is true if city equals osaka basically."
+    "del frame2[\"foreigners\"]\n",
+    "frame2.columns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab86f5ee",
+   "metadata": {},
+   "source": [
+    "# Note\n",
+    "The column returned from imndexing a DataFrame is a view on the underlying data, not a copy. thus, any in place modification to the series will be reflected in data frame."
    ]
   }
  ],
