--- a/Notebooks/Basic_pandas.ipynb
+++ b/Notebooks/Basic_pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 1,
    "id": "b37b3893",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 2,
    "id": "c065c352",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 3,
    "id": "5201ed9e",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 201,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 4,
    "id": "e15e30fe",
    "metadata": {},
    "outputs": [
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 5,
    "id": "3ec36575",
    "metadata": {},
    "outputs": [
@@ -152,7 +152,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 6,
    "id": "656328ac",
    "metadata": {},
    "outputs": [
@@ -178,7 +178,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 204,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 7,
    "id": "71d6c11c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 205,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 8,
    "id": "59c7052c",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "id": "b6b3a4d1",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 207,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 10,
    "id": "eda72acd",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "4  kyoto  2005     1550000"
       ]
      },
-     "execution_count": 208,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 11,
    "id": "b0b2442a",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "5     1600000  kyoto  2010"
       ]
      },
-     "execution_count": 209,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 12,
    "id": "ae271292",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "Index(['year', 'city', 'population', 'debt'], dtype='object')"
       ]
      },
-     "execution_count": 210,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 13,
    "id": "77afc7c3",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "Name: city, dtype: object"
       ]
      },
-     "execution_count": 211,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 14,
    "id": "78340404",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 212,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 15,
    "id": "3915a5eb",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "6  2010  kyoto     1600000     5"
       ]
      },
-     "execution_count": 213,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 16,
    "id": "deb12e93",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
        "6  2010  kyoto     1600000   NaN"
       ]
      },
-     "execution_count": 214,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "e2ba55d9",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "Index(['year', 'city', 'population', 'debt'], dtype='object')"
       ]
      },
-     "execution_count": 217,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,7 +803,322 @@
    "metadata": {},
    "source": [
     "# Note\n",
-    "The column returned from imndexing a DataFrame is a view on the underlying data, not a copy. thus, any in place modification to the series will be reflected in data frame."
+    "The column returned from indexing a DataFrame is a view on the underlying data, not a copy. thus, any in place modification to the series will be reflected in data frame. The column can be explicitly copied with the series's copy method. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f6df320b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2001</th>\n",
+       "      <th>2002</th>\n",
+       "      <th>2000</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Hiroshima</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>2.9</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Nara</th>\n",
+       "      <td>1.8</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           2001  2002  2000\n",
+       "Hiroshima   2.4   2.9   NaN\n",
+       "Nara        1.8   3.6   1.5"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# another common form of data is nested dict of dicts:\n",
+    "pop={\"Hiroshima\": {2001:2.4,2002:2.9},\n",
+    "    \"Nara\":{2000:1.5,2001:1.8,2002:3.6}}\n",
+    "\n",
+    "frame3=pd.DataFrame(pop)\n",
+    "frame3\n",
+    "\n",
+    "#we can transpse the Dataframe (swaps rows and columns) with similar syntax to numpy array:\n",
+    "frame3.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "6c817049",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Hiroshima</th>\n",
+       "      <th>Nara</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>2.9</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2003</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Hiroshima  Nara\n",
+       "2001        2.4   1.8\n",
+       "2002        2.9   3.6\n",
+       "2003        NaN   NaN\n",
+       "2000        NaN   1.5"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Keys in the inner dicts are combined and soted to form the index in the results. This isnt true if an explicit index is specified.\n",
+    "pd.DataFrame(pop,index=[2001,2002,2003,2000])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "1620222c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Nara</th>\n",
+       "      <th>Hiroshima</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>1.8</td>\n",
+       "      <td>2.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>3.6</td>\n",
+       "      <td>2.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Nara  Hiroshima\n",
+       "2001   1.8        2.4\n",
+       "2002   3.6        2.9"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Dict of series are treated in much the same way:\n",
+    "pdata={\"Nara\":frame3[\"Nara\"][:-1],\n",
+    "        \"Hiroshima\":frame3[\"Hiroshima\"][:2]}\n",
+    "pd.DataFrame(pdata)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "b56dec0c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>state</th>\n",
+       "      <th>Hiroshima</th>\n",
+       "      <th>Nara</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2001</th>\n",
+       "      <td>2.4</td>\n",
+       "      <td>1.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2002</th>\n",
+       "      <td>2.9</td>\n",
+       "      <td>3.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2000</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "state  Hiroshima  Nara\n",
+       "year                  \n",
+       "2001         2.4   1.8\n",
+       "2002         2.9   3.6\n",
+       "2000         NaN   1.5"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# if a dataframe index and column have their name attributes set,\n",
+    "frame3.index.name=\"year\"; frame3.columns.name=\"state\"\n",
+    "frame3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "714512d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[2000, 'osaka', 2700000, nan],\n",
+       "       [2005, 'osaka', 2750000, -1.2],\n",
+       "       [2010, 'osaka', 2800000, 2.3],\n",
+       "       [2000, 'kyoto', 1500000, -5.7],\n",
+       "       [2005, 'kyoto', 1550000, nan],\n",
+       "       [2010, 'kyoto', 1600000, nan]], dtype=object)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# as with series the values attributes returns the data contained in the Dataframe as tow-dimensional array.\n",
+    "frame3.values\n",
+    "\n",
+    "# if the dataframes's column have differnt dtypes, the dtypes values array will be chosen to accomodate all of the columns:\n",
+    "frame2.values"
    ]
   }
  ],
