--- a/Notebooks/Basic_pandas.ipynb
+++ b/Notebooks/Basic_pandas.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "b37b3893",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "c065c352",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "5201ed9e",
    "metadata": {},
    "outputs": [
@@ -83,7 +83,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "e15e30fe",
    "metadata": {},
    "outputs": [
@@ -114,9 +114,9 @@
       "siri       2000.0\n",
       "gemini    12000.0\n",
       "dtype: float64\n",
+      "alexa     3000.0\n",
       "grok         NaN\n",
       "claude       NaN\n",
-      "alexa     3000.0\n",
       "dtype: float64\n"
      ]
     }
@@ -139,20 +139,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "3ec36575",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "alexa      True\n",
        "grok      False\n",
        "claude    False\n",
-       "alexa      True\n",
        "dtype: bool"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,20 +165,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "656328ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
+       "alexa     False\n",
        "grok       True\n",
        "claude     True\n",
-       "alexa     False\n",
        "dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "71d6c11c",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "59c7052c",
    "metadata": {},
    "outputs": [
@@ -226,9 +226,9 @@
      "output_type": "stream",
      "text": [
       "Device\n",
+      "alexa     3000.0\n",
       "grok         NaN\n",
       "claude       NaN\n",
-      "alexa     3000.0\n",
       "Name: Users, dtype: float64\n"
      ]
     }
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "b6b3a4d1",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "eda72acd",
    "metadata": {},
    "outputs": [
@@ -368,7 +368,7 @@
        "4  kyoto  2005     1550000"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "b0b2442a",
    "metadata": {},
    "outputs": [
@@ -468,7 +468,7 @@
        "5     1600000  kyoto  2010"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "ae271292",
    "metadata": {},
    "outputs": [
@@ -490,7 +490,7 @@
        "Index(['year', 'city', 'population', 'debt'], dtype='object')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "77afc7c3",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
        "Name: city, dtype: object"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 18,
    "id": "78340404",
    "metadata": {},
    "outputs": [
@@ -555,7 +555,7 @@
        "Name: 2, dtype: object"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "3915a5eb",
    "metadata": {},
    "outputs": [
@@ -655,7 +655,7 @@
        "6  2010  kyoto     1600000     5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -670,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "id": "deb12e93",
    "metadata": {},
    "outputs": [
@@ -758,7 +758,7 @@
        "6  2010  kyoto     1600000   NaN"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -772,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "id": "e2ba55d9",
    "metadata": {},
    "outputs": [
@@ -782,7 +782,7 @@
        "Index(['year', 'city', 'population', 'debt'], dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f6df320b",
    "metadata": {},
    "outputs": [
@@ -861,7 +861,7 @@
        "Nara        1.8   3.6   1.5"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -880,7 +880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 23,
    "id": "6c817049",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "2000        NaN   1.5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "id": "714512d0",
    "metadata": {},
    "outputs": [
@@ -1108,7 +1108,7 @@
        "       [2010, 'kyoto', 1600000, nan]], dtype=object)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,6 +1119,67 @@
     "\n",
     "# if the dataframes's column have differnt dtypes, the dtypes values array will be chosen to accomodate all of the columns:\n",
     "frame2.values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "05c47414",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Index objects: it is responsible for holding the axis labels and other metadata. Any array or other sequence of labels we use constructing a series and data frame is internally converted to index.\n",
+    "\n",
+    "obj=pd.Series(range(3), index=[\"a\",\"b\",\"c\"])\n",
+    "index=obj.index\n",
+    "index\n",
+    "\n",
+    "# index objects are immutable and cannot be modified by the user, which makes safer to share index objects among data structures.\n",
+    "labels=pd.Index(np.arange(2))\n",
+    "labels\n",
+    "\n",
+    "obj2=pd.Series([1.5,2.4],index=labels)\n",
+    "obj2.index is labels"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "60839a5f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Nara', 'Nara', 'osaka'], dtype='object')"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# index also behaves like fixed-size set: \n",
+    "frame3\n",
+    "frame3.columns\n",
+    "\"Nara\" in frame3.columns\n",
+    "\n",
+    "# unlike python sets, a pandas index can contain duplicate labels.\n",
+    "dup_lab=pd.Index([\"Nara\",\"Nara\",\"osaka\"])\n",
+    "dup_lab\n",
+    "# selection with duplicate labels will select all occurances of that label. "
    ]
   }
  ],
