add boolean index

--- a/Notebooks/Numpy_basics.ipynb
+++ b/Notebooks/Numpy_basics.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "4aa3bf5d",
    "metadata": {},
    "outputs": [
@@ -27,9 +27,9 @@
      "output_type": "stream",
      "text": [
       "CPU times: total: 0 ns\n",
-      "Wall time: 11.2 ms\n",
-      "CPU times: total: 78.1 ms\n",
-      "Wall time: 413 ms\n"
+      "Wall time: 23 ms\n",
+      "CPU times: total: 109 ms\n",
+      "Wall time: 431 ms\n"
      ]
     }
    ],
@@ -45,18 +45,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "id": "158b3adb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-3.17576931,  2.27312334, -0.82585202, -1.5619827 , -0.55464638],\n",
-       "       [ 4.74150781,  2.06285538,  0.82883988,  0.46834231, -0.21819372]])"
+       "array([[-1.16734776, -2.39322103,  1.74353703,  2.19686291,  0.11436027],\n",
+       "       [ 2.1488396 ,  0.78087784, -1.27845166,  0.62303354,  2.35296017]])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "id": "0da4ea28",
    "metadata": {},
    "outputs": [
@@ -81,7 +81,7 @@
        "dtype('float64')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "289e0a90",
    "metadata": {},
    "outputs": [
@@ -106,7 +106,7 @@
        "array([6. , 7. , 8. , 9.1])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "fdd28b8e",
    "metadata": {},
    "outputs": [
@@ -132,7 +132,7 @@
        "       [4, 5, 6, 7]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "465cf67a",
    "metadata": {},
    "outputs": [
@@ -157,7 +157,7 @@
        "(2, 4)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "8a1c2e36",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
        "       [0., 0., 0.]])"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 34,
    "id": "108be260",
    "metadata": {},
    "outputs": [
@@ -222,7 +222,7 @@
        "dtype('int32')"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "92d2a897",
    "metadata": {},
    "outputs": [
@@ -252,7 +252,7 @@
        "       [25, 36, 49, 64]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "7e0272ec",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "array([ 0,  1,  2,  3,  4, 64, 64, 64,  8,  9])"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 37,
    "id": "9f561679",
    "metadata": {},
    "outputs": [
@@ -317,7 +317,7 @@
        "       [10, 11, 12]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 38,
    "id": "a001d043",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "array([1, 2, 3])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "id": "676f60eb",
    "metadata": {},
    "outputs": [
@@ -378,7 +378,7 @@
        "       [5, 6]])"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,17 +393,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "4b8c8230",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4, 5])"
+       "array([3, 6])"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 41,
    "id": "095da370",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "       [7, 8, 9]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,6 +441,79 @@
     "arr2d[:,:1]\n",
     "arr2d[:2,1:]=0\n",
     "arr2d\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "119bc1fd",
+   "metadata": {},
+   "source": [
+    "# Note\n",
+    "arr[rows,columns]\n",
+    " arr[:2,1:] shape:(2,2) from 3 by 3 matrix.  means select first two rows and all columns from the second column ownward of the array.\n",
+    " arr[2]  Shape (3,) third row and colums from that row only. \n",
+    " arr[2,:] is also the same\n",
+    " arr[2:,:] (1,3)\n",
+    " arr[:,:2] refers (3,2) # ALL ROWS but until second column. (0,1=index)\n",
+    " arr[1,:2] refers (2,)\n",
+    " arr[1:2,:2] refers (1,2) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "7dca8089",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.28962276])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#boolean index\n",
+    "city=np.array([\"osaka\",\"kyoto\",\"amagassaki\"])\n",
+    "data=np.random.randn(3,4) # specify 3 rows and 4 columns, so it returns 2D array with 3 rows and 4 columns.\n",
+    "city\n",
+    "city==\"Nara\" # arrays are also vectorized like airthmetic operations. \n",
+    "# the boolean array can be passed while indexing the array:\n",
+    "data[city==\"osaka\"] # this allows the filtering arrays by value conditions rather than by numeric index positions.\n",
+    "\n",
+    "# select from the rows and index the columns as well.\n",
+    "data[city==\"osaka\",3] # only extract the rows where city name is osaka. ( selective filtering)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "b149d051",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-1.57988092,  2.06985043,  2.53317806,  1.10936603])"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city!=\"osaka\" \n",
+    "#  negate the ondition using ~\n",
+    "data[~(city==\"osaka\")]\n",
+    "\n",
+    "# ~ operator can be useful to invet a general condition.\n",
+    "cond=city==\"osaka\"\n",
+    "data[~cond]"
    ]
   }
  ],
