add panda series and how to work with them

--- a/Notebooks/Pandas_01_Data_import.ipynb
+++ b/Notebooks/Pandas_01_Data_import.ipynb
@@ -5,8 +5,7 @@
    "id": "8c04fc56",
    "metadata": {},
    "source": [
-    "# Read, Write, and Export CSV Files - ITVersity\n",
-    "Practice from ITVersity's Pandas YouTube series: [Link to video/playlist](https://youtu.be/wMC1GgN8Whs?si=VpwvAiX1VVhjYVli).\n",
+    "# Read, Write, and Export CSV Files \n",
     "Covers loading CSV files, writing data, and exporting to CSV using Pandas."
    ]
   },
