add sorting by categorical columns

--- a/Notebooks/Pandas_03_Data_cleaning.ipynb
+++ b/Notebooks/Pandas_03_Data_cleaning.ipynb
@@ -4289,6 +4289,446 @@
    "source": [
     "penguins_data[penguins_data[\"sex\"]==\"male\"].sort_values(by=\"bill_depth_mm\",ascending=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "1f4bfc37",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3800</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3800</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0     Adelie  Torgersen            39.1           18.7                181   \n",
+       "1     Adelie  Torgersen            39.1           18.7                181   \n",
+       "2  Chinstrap      Dream            46.5           17.9                195   \n",
+       "3     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "4     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "5     Adelie  Torgersen            39.1           18.7                181   \n",
+       "6  Chinstrap      Dream            46.5           17.9                195   \n",
+       "7     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0         3750    Male  \n",
+       "1         3750    Male  \n",
+       "2         3800  Female  \n",
+       "3         5000    Male  \n",
+       "4         5000    Male  \n",
+       "5         3750    Male  \n",
+       "6         3800  Female  \n",
+       "7         5000    Male  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# custom DataFrames: it helps in edge cases or demonstrate specific Data manipulation. \n",
+    "# since penguins.csv doesnot contains duplicates and it is clean i will create a dataframe which have  duplicate entries. \n",
+    "import pandas as pd\n",
+    "\n",
+    "# Create a sample DataFrame with duplicate rows\n",
+    "data = {\n",
+    "    \"species\": [\"Adelie\", \"Adelie\", \"Chinstrap\", \"Gentoo\", \"Gentoo\", \"Adelie\", \"Chinstrap\", \"Gentoo\"],\n",
+    "    \"island\": [\"Torgersen\", \"Torgersen\", \"Dream\", \"Biscoe\", \"Biscoe\", \"Torgersen\", \"Dream\", \"Biscoe\"],\n",
+    "    \"bill_length_mm\": [39.1, 39.1, 46.5, 50.0, 50.0, 39.1, 46.5, 50.0],\n",
+    "    \"bill_depth_mm\": [18.7, 18.7, 17.9, 15.3, 15.3, 18.7, 17.9, 15.3],\n",
+    "    \"flipper_length_mm\": [181, 181, 195, 220, 220, 181, 195, 220],\n",
+    "    \"body_mass_g\": [3750, 3750, 3800, 5000, 5000, 3750, 3800, 5000],\n",
+    "    \"sex\": [\"Male\", \"Male\", \"Female\", \"Male\", \"Male\", \"Male\", \"Female\", \"Male\"]\n",
+    "}\n",
+    "\n",
+    "penguins_duplicate = pd.DataFrame(data)\n",
+    "penguins_duplicate\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "35388a3c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deduplicated_df=penguins_duplicate.drop_duplicates(subset=[\"body_mass_g\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "c2346a29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3800</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0     Adelie  Torgersen            39.1           18.7                181   \n",
+       "2  Chinstrap      Dream            46.5           17.9                195   \n",
+       "3     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0         3750    Male  \n",
+       "2         3800  Female  \n",
+       "3         5000    Male  "
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "deduplicated_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea7575c2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>species</th>\n",
+       "      <th>island</th>\n",
+       "      <th>bill_length_mm</th>\n",
+       "      <th>bill_depth_mm</th>\n",
+       "      <th>flipper_length_mm</th>\n",
+       "      <th>body_mass_g</th>\n",
+       "      <th>sex</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Adelie</td>\n",
+       "      <td>Torgersen</td>\n",
+       "      <td>39.1</td>\n",
+       "      <td>18.7</td>\n",
+       "      <td>181</td>\n",
+       "      <td>3750</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Gentoo</td>\n",
+       "      <td>Biscoe</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>15.3</td>\n",
+       "      <td>220</td>\n",
+       "      <td>5000</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3800</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Chinstrap</td>\n",
+       "      <td>Dream</td>\n",
+       "      <td>46.5</td>\n",
+       "      <td>17.9</td>\n",
+       "      <td>195</td>\n",
+       "      <td>3800</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     species     island  bill_length_mm  bill_depth_mm  flipper_length_mm  \\\n",
+       "0     Adelie  Torgersen            39.1           18.7                181   \n",
+       "1     Adelie  Torgersen            39.1           18.7                181   \n",
+       "3     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "4     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "5     Adelie  Torgersen            39.1           18.7                181   \n",
+       "7     Gentoo     Biscoe            50.0           15.3                220   \n",
+       "2  Chinstrap      Dream            46.5           17.9                195   \n",
+       "6  Chinstrap      Dream            46.5           17.9                195   \n",
+       "\n",
+       "   body_mass_g     sex  \n",
+       "0         3750    Male  \n",
+       "1         3750    Male  \n",
+       "3         5000    Male  \n",
+       "4         5000    Male  \n",
+       "5         3750    Male  \n",
+       "7         5000    Male  \n",
+       "2         3800  Female  \n",
+       "6         3800  Female  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# sorting by categorical columns\n",
+    "import pandas as pd\n",
+    "# Create a sample DataFrame with duplicate rows\n",
+    "data = {\n",
+    "    \"species\": [\"Adelie\", \"Adelie\", \"Chinstrap\", \"Gentoo\", \"Gentoo\", \"Adelie\", \"Chinstrap\", \"Gentoo\"],\n",
+    "    \"island\": [\"Torgersen\", \"Torgersen\", \"Dream\", \"Biscoe\", \"Biscoe\", \"Torgersen\", \"Dream\", \"Biscoe\"],\n",
+    "    \"bill_length_mm\": [39.1, 39.1, 46.5, 50.0, 50.0, 39.1, 46.5, 50.0],\n",
+    "    \"bill_depth_mm\": [18.7, 18.7, 17.9, 15.3, 15.3, 18.7, 17.9, 15.3],\n",
+    "    \"flipper_length_mm\": [181, 181, 195, 220, 220, 181, 195, 220],\n",
+    "    \"body_mass_g\": [3750, 3750, 3800, 5000, 5000, 3750, 3800, 5000],\n",
+    "    \"sex\": [\"Male\", \"Male\", \"Female\", \"Male\", \"Male\", \"Male\", \"Female\", \"Male\"]\n",
+    "}\n",
+    "\n",
+    "penguins_duplicate = pd.DataFrame(data)\n",
+    "penguins_duplicate\n",
+    "\n",
+    "priority_based_sorting= pd. CategoricalDtype(categories=[\"Male\",\"Female\"])\n",
+    "penguins_duplicate[\"sex\"]=penguins_duplicate[\"sex\"].astype(priority_based_sorting)\n",
+    "penguins_duplicate.sort_values(by=\"sex\")"
+   ]
   }
  ],
  "metadata": {
