add inner joins in multiple columns

--- a/Notebooks/Pandas_04_joining_merging.ipynb
+++ b/Notebooks/Pandas_04_joining_merging.ipynb
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "ba5555e3",
    "metadata": {},
    "outputs": [
@@ -258,12 +258,12 @@
    "source": [
     "import pandas as pd\n",
     "penguins=pd.read_csv(\"../Datasets/penguins.csv\")   \n",
-    "penguins.head()\n"
+    "penguins.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "44b75177",
    "metadata": {},
    "outputs": [
@@ -306,13 +306,13 @@
        "Name: body_mass_g, dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# # Prep Splits for joining (Simulate tables) \n",
+    "# Prep Splits for joining (Simulate tables) \n",
     "\n",
     "left=penguins[[\"rowid\",\"species\",\"island\",\"sex\",\"year\"]].copy()\n",
     "right=penguins[[\"rowid\",\"bill_length_mm\",\"bill_depth_mm\",\"flipper_length_mm\",\"body_mass_g\"]].copy()\n",
@@ -327,6 +327,29 @@
     "print(inner_merged.isna().sum())  # Check for NaNs (e.g., sex might have some)\n",
     "\n",
     "inner_merged.groupby(\"species\")[\"body_mass_g\"].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "f7c6b98d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(14388, 6)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Multi-Column Inner (No row_id Needed): For species-year combos.\n",
+    "left_multi = penguins[['species', 'island', 'sex', 'year']]\n",
+    "right_multi = penguins[['species', 'year', 'bill_length_mm', 'body_mass_g']].drop([0, 10])  # Mismatches\n",
+    "\n",
+    "inner_multi = pd.merge(left_multi, right_multi, on=['species', 'year'], how='inner')\n",
+    "print(inner_multi.shape)  # Fewer rows if year-species don't overlap perfectly"
    ]
   },
   {
@@ -345,7 +368,7 @@
     "   Use `pd.merge()` to combine datasets.  \n",
     "   Specify join keys using `left_on` and `right_on` parameters (or `on` if key name is the same).\n",
     "\n",
-    "3. **Practical Use Case: Aggregating Sales by Region**  \n",
+    "3. **Practical Use Case: Aggregating mass by Species**  \n",
     "   After merging, use operations like `groupby()` for aggregation.  \n",
     "   Example: Compute total sales by region using `groupby()`.\n",
     "\n",
@@ -354,6 +377,12 @@
     "   - ✅ Inspect results: Use `.shape` to check row counts after join.  \n",
     "   - ✅ Handle missing keys: Remember unmatched rows are excluded; consider left/right join if you want to keep them."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba386b5d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
