--- a/Notebooks/Pandas_04_joining_merging.ipynb
+++ b/Notebooks/Pandas_04_joining_merging.ipynb
@@ -5,9 +5,11 @@
    "id": "a2c3fd17",
    "metadata": {},
    "source": [
-    "# Joining and merging in pandas allow combining DataFrames similarly to SQL joins, primarily using the merge() function and .join() method. The four core pillars are:\n",
+    "# **Joining and merging** \n",
     "\n",
-    "1. Functions: merge() (flexible, SQL-like joins on columns or index) and .join() (joins on index by default).\n",
+    "It  allow combining DataFrames similarly to SQL joins, primarily using the `merge()` function and `.join()` method. The four core pillars are:\n",
+    "\n",
+    "1. Functions: `merge()` (flexible, SQL-like joins on columns or index) and `.join()` (joins on index by default).\n",
     "\n",
     "2. Join types: inner, left, right, and outer define which rows are retained during the join.\n",
     "\n",
@@ -1900,12 +1902,6 @@
     "\n",
     "- Outer Join: Returns all rows from both DataFrames, including all unmatched rows from both sides, so most complete but most NaNs."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f4000229",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
